# src/aca/api/controllers/lock_control_controllers.py
@@ -3,12 +3,14 @@ import logging
 from flask import Blueprint, request
 from flask import jsonify
 
+from aca.api.db.model.pin import Pin
 from aca.api.model.input.lock_control_input import LockControlInput
 from aca.api.model.lock_control_model import LockControlModel
 from aca.api.model.open_door_policy_model import OpenDoorPolicyModel
+from aca.api.model.pin_model import PinModel
 from aca.common.di import iocc
 from aca.common.schema import validate_json_schema, lock_input_json_schema, \
-    open_lock_policy_json_schema
+    open_lock_policy_json_schema, pin_json_schema
 
 lock_api_bp = Blueprint('lock_api', __name__, url_prefix='/api/lock')
 
@@ -22,6 +24,40 @@ def post_lock_control():
     lock_input: LockControlInput = LockControlInput(request.get_json())
     iocc(LockControlModel).handle_request(lock_input)
     return jsonify({'status': 'success'}), 200
+
+
+@lock_api_bp.route('/pin', methods=['POST'], endpoint="pin_open_lock")
+@validate_json_schema(pin_json_schema)
+def post_pin_control():
+    logger.debug("Handling POST /api/lock/pin")
+    lock_input: LockControlInput = LockControlInput({
+        "operation": "PIN_OPEN",
+        "buzzer_duration_seconds": 2
+    })
+    pin = Pin(request.get_json()["pin"])
+    try:
+        iocc(LockControlModel).handle_request(lock_input, pin)
+    except Exception as e:  # TODO exceptions
+        return jsonify({'status': 'invalid_pin'}), 403
+    return jsonify({'status': 'success'}), 200
+
+
+@lock_api_bp.route('/pin/create', methods=['POST'], endpoint="pin_create")
+@validate_json_schema(pin_json_schema)
+def post_pin_create():
+    logger.debug("Handling POST /api/lock/pin/create")
+    pin = Pin(request.get_json()["pin"])
+    iocc(PinModel).create(pin)
+    return jsonify({'status': 'success'}), 200
+
+
+@lock_api_bp.route('/pin/delete', methods=['DELETE'], endpoint="pin_delete")
+@validate_json_schema(pin_json_schema)
+def post_pin_delete():
+    logger.debug("Handling DELETE /api/lock/pin/delete")
+    pin = Pin(request.get_json()["pin"])
+    iocc(PinModel).remove(pin)
+    return jsonify({'status': 'success'}), 204
 
 
 @lock_api_bp.route('/policy', methods=['POST'], endpoint="post_open_lock_policy")
